adds md to config

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Riley Ramone 
 description: Riley Ramone is a fusion of organic matter and technology. Approach with caution.
+markdown: kramdown
